Fixed long intro page on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ and (max-width: 720px) {
 	}
 	.intro-grid-container {
 		display: grid;
-		grid-template-rows: 1fr 2fr;
+		grid-template-rows: 1fr 1fr;
 		gap: 20px;
 		justify-items: center;
 	}
